--- a/style/style.css
+++ b/style/style.css
@@ -16,10 +16,10 @@ body{
 .btn-primary{
     border-radius: 8px;
     background: rgb(229, 84, 115);
-    padding: 20px 43px 20px 43px;
+    padding: 17px 35px 17px 35px;
     border: none;
     color: rgb(255, 255, 255);
-    font-size: 20px;
+    font-size: 17px;
     font-weight: 700;
 }
 
@@ -112,9 +112,8 @@ header{
 /* flower section starts here  */
 
 .flower-section{
-    width: 1100px;
-    height: 462px;
-    border: 2px solid pink;
+    width:1100px;
+    height:462px;
     margin: 0 auto;
 
 }
@@ -132,15 +131,18 @@ header{
 .first-flower{
     width: 200px;
     height: 300px;
+    background: rgba(167, 33, 98, 0.15);
 }
 .third-flower{
     width: 262px;
     height: 262px;
+    background: rgba(5, 151, 160, 0.15);
 }
 
 .second-flower{
     width: 223px;
     height: 334px;
+    background: rgba(71, 125, 17, 0.15);
 }
 
 .flowers img{
@@ -149,10 +151,246 @@ header{
 }
 
 .shape{
-    border: 2px solid yellowgreen;
-    width: 345px;
-    height: 395px;
+    width:345px;
+    height:395px;
     border-radius: 200px 200px 0 0;
 }
+.flowers .tag{
+    color: rgb(39, 39, 39);
+    font-size: 17px;
+    font-weight: 700;
+    text-align: center;
+    border-bottom: 1px solid rgb(39, 39, 39);
+    width: 150px;
+    padding-bottom: 3px;
+    margin: 20px auto;
 
+}
 /* flower section ends here  */
+
+/* delivery section starts here */
+.delivery-section{
+    margin: 90px auto;
+    width: 1100px;
+    height: 272px;
+    border-radius: 8px;
+    background: rgba(39, 39, 39, 0.05);
+
+}
+
+.deliveries {
+    width: 1100px;
+    height: 272px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.single-delivery{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+
+}
+/* delivery section ends here */
+
+/* sale container starts here */
+.sale-container{
+    width: 1349px;
+    height: 520px;
+    border-radius: 8px;
+    background: rgba(229, 84, 115, 0.05)
+}
+.sales{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.left-box{
+    width: 60%;
+    text-align: center;
+}
+.right-box{
+    width: 40%;
+}
+
+.left-box h2{
+    font-family: Lato;
+    font-size: 34px;
+    font-weight: 800;
+    /* text-align: left; */
+}
+
+.left-box p{
+    color: rgba(39, 39, 39, 0.6);
+    font-family: Lato;
+    font-size: 15px;
+    font-weight: 400;
+    text-align: center;
+    margin: 20px auto;
+
+}
+
+.left-box h2 span{
+    color: rgb(229, 84, 115);
+}
+
+.right-box{
+    margin:70px auto;
+}
+
+.image{
+    width: 318px;
+    height: 420px;
+}
+
+.image img{
+    width: 100%;
+    height: 100%;
+
+}
+/* sale container ends here */
+
+/*  gallery section starts here  */
+.gallery-section{
+    width: 1100px;
+    height: 382px;
+    margin: 0 auto;
+}
+
+.images{
+    width: 1100px;
+    height: 382px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 17px;
+}
+
+.single-image{
+    width: 260px;
+    height: 320px;
+    
+
+}
+
+.single-image img{
+    width: 100%;
+    height: 100%;
+}
+
+/*  gallery section ends here  */
+
+/* Get The Latest Deals section starts here  */
+.deal-section{
+
+    width: 1100px;
+    height: 380px; 
+    border-radius: 8px;
+    /* border: 2px solid pink; */
+    background: url("../asset/lastbanner.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0 auto;
+    margin-top: 80px;
+    
+}
+.deals{
+    
+    width: 735px;
+    height: 206px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    padding-top: 80px;
+}
+
+.deals h2{
+    color: rgb(39, 39, 39);
+    font-size: 34px;
+    font-weight: 800;
+    text-align: center;
+}
+
+.deals p{
+    color: rgba(39, 39, 39, 0.6);
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+    padding: 15px 0;
+}
+
+.only-form{
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+.only-form input[type="email"]{
+    width: 580px;
+    height: 54px;
+    border: none;
+    padding-left:30px;
+    border-radius: 8px;
+}
+
+.only-form input[type="submit"]{
+    width: 140px;
+    height: 54px;
+}
+/* Get The Latest Deals section ends here  */
+
+/* footer section starts here  */
+.footer-section{
+    width: 1349px;
+    height: 380px;
+    background: rgb(17, 16, 16);
+    margin-top: 90px ;
+    
+
+}
+.footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    padding-top: 90px;
+
+}
+.footer-title{
+    font-family: Lato;
+    font-size: 40px;
+    font-weight: 800;
+    text-align: center;
+    color: white;
+}
+.footer-title span{
+    color: rgb(229, 84, 115);
+}
+
+.footer-description {
+    color: rgba(255, 255, 255, 0.9);
+    font-size: 15px;
+    font-weight: 400;
+    text-align: center;
+}
+.copy-right{
+    color: rgba(255, 255, 255, 0.4);
+    font-size: 13px;
+    font-weight: 400;
+    text-align: center;
+    padding-top: 20px;
+}
+
+/* footer section ends here  */
+
+
